# awsop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  pyproject.toml
.kiro/specs/awsop-cli-migration/: design.md  requirements.md  tasks.md
.kiro/specs/console-browser-launch/: design.md  requirements.md  tasks.md
.kiro/specs/help-option-fix/: design.md  requirements.md  tasks.md
.kiro/steering/: japanese-output.md  python-uv-only.md
src/awsop/: __init__.py  __main__.py  cli.py  logging.py
src/awsop/app/: __init__.py  (+3 more)
tests/: __init__.py  test_basic.py
tests/integration/: test_advanced_options.py  test_console_integration.py  test_end_to_end.py  test_error_cases.py  test_help_option.py  test_option_combinations.py  test_profile_switching.py  test_shell_wrapper_credentials.py  test_version_display.py
tests/property/: strategies.py  test_aws_config.py  test_aws_sts.py  test_config_file_priority.py  test_console_region_priority.py  test_console_service.py  test_console_url_output.py  test_credentials_writer.py  test_env_cleanup.py  test_error_exit_code.py  test_export_commands.py  test_help_option.py  test_logging.py  test_region_priority.py  test_session_name.py  test_shell_completion.py  test_shell_wrapper_eval.py  test_show_commands.py  test_ui_output.py  test_unset_commands.py  test_version_type.py
tests/unit/: test_console_cli_integration.py  test_console_error_handling.py  test_console_manager.py  test_onepassword.py  test_shell_wrapper.py  test_ui_feedback.py  test_version_fallback.py  test_version_installed.py
(+26 files in other folders)
