[project]
name = "awsop"
version = "1.0.0"
description = "1Password連携によるAWS認証情報管理ツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.9.0", "rich>=13.0.0", "boto3>=1.28.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "hypothesis>=6.82.0", "pytest-cov>=4.1.0"]

[project.scripts]
awsop = "awsop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
